k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plate-service
spec:
  selector:
    app: plate
  ports:
    - port: 3000
      protocol: TCP
  type: LoadBalancer
